# op_paper_stats

./: .gitignore  CLAUDE.md  README.md  REPORT.md  aider.sh  alert_signups.py  characteristics.py  citations.py  code_stats.py  gs_analysis.py  gs_analysis_report.md  op_papers.csv  paper_comparison.py  paper_comparison_report.html  papers.csv  pyproject.toml  run_analysis.sh
data/: alert-signups.csv
